--- a/anydiff-branch/AUTHORS
+++ b/anydiff-branch/AUTHORS
@@ -5,6 +5,6 @@
  * Francois Harvey <fharvey@securiweb.net>
  * Mark Rowe <trac@bdash.net.nz> 
  * Matthew Good <trac@matt-good.net>
- * Christian Boos <cboos@wanadoo.fr>
+ * Christian Boos <cboos@neuf.fr>
 
 See also THANKS for people who have contributed to the project.
