--- a/THANKS
+++ b/THANKS
@@ -5,10 +5,11 @@
  * Christian Boos                 cboos@bct-technology.com
  * Rocky Burt                     rocky.burt@myrealbox.com
  * Toni Brkic                     toni.brkic@switchcore.com
- * Wesley Crucius                 wcrucius@sandc.com
- * Daragh Fitzpatrick             Daragh@i2i-Tech.com
- * dju'                           
  * Felix Colins                   felix@keyghost.com
+ * Wesley Crucius                 wcrucius@sandc.com
+ * dju'                           
+ * Daragh Fitzpatrick             Daragh@i2i-Tech.com
+ * Markus Fuchs                   
  * Eric Gillespie                 epg@netbsd.org
  * Matthew Good                   trac@matt-good.net
  * Shun-ichi Goto                 gotoh@taiyo.co.jp
