--- a/THANKS
+++ b/THANKS
@@ -18,6 +18,7 @@
  * Stephen Hansen                 shansen@advpubtech.com
  * Laurie Harper                  zodiac@holoweb.net
  * Francois Harvey                fharvey@securiweb.net
+ * Tim Hatch                      trac@timhatch.com
  * Michael Hope                   michael.hope@hamjet.co.nz
  * Richard Hult                   richard@imendio.com
  * Nuutti Kotivuori               naked@iki.fi
