--- a/AUTHORS
+++ b/AUTHORS
@@ -6,5 +6,7 @@
  * Mark Rowe <trac@bdash.net.nz> 
  * Matthew Good <trac@matt-good.net>
  * Christian Boos <cboos@neuf.fr>
+ * Emmanual Blot <emmanuel.blot@free.fr>
+ * Alec Thomas <alec@swapoff.org>
 
 See also THANKS for people who have contributed to the project.
