--- a/THANKS
+++ b/THANKS
@@ -21,6 +21,7 @@
  * Tim Hatch                      trac@timhatch.com
  * Michael Hope                   michael.hope@hamjet.co.nz
  * Richard Hult                   richard@imendio.com
+ * Waldemar Kornewald             wkornew@gmx.net
  * Nuutti Kotivuori               naked@iki.fi
  * Ian Leader                     ian.leader@line.co.uk
  * Christopher Lenz               cmlenz@gmx.de
