--- a/THANKS
+++ b/THANKS
@@ -40,6 +40,7 @@
  * Cap Petschulat                 cap@cdres.com
  * Nicholas Riley                 sabi
  * Manuzhai                       manuzhai@gmail.com
+ * Armin Ronacher (mitsuhiko)     armin.ronacher@active-4.com
  * Mark Rowe                      mark.rowe@bdash.net.nz
  * Olliver Rutherfurd             ollie
  * pkou                           pkou@ua.fm
