--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,4 @@
+ * Ants Aasma                     ants.aasma@gmail.com
  * Pedro Algarvio (s0undt3ch)     ufs@ufsoft.org
  * Brad Anderson                  brad@dsource.org
  * Christopher Armstrong          radix
