--- a/THANKS
+++ b/THANKS
@@ -52,6 +52,7 @@
  * Noah Slater                    nslater@gmail.com
  * Bill Soudan                    bill@soudan.net
  * Ludvig Strigeus                
+ * Markus Tacker                  m@tacker.org
  * Alec Thomas                    alec@swapoff.org
  * Jani Tiainen                   redetin@luukku.com
  * Zilvinas Valinskas             zilvinas@gemtek.lt
