--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,75 @@
+Trac 0.10.4 (April ?, 2007)
+http://svn.edgewall.org/repos/trac/tags/trac-0.10.4
+
+ Trac 0.10.4 is a bug fix release. The following list contains only a 
+ few highlights:
+
+ * Repository cache improvements. The new syncing scheme is incompatible with
+   the previous one and requires a database schema upgrade in order to prevent
+   the old and the new codebase to be mixed. A repository resync is not needed,
+   though. The 0.10.4 scheme is compatible with the 0.11 one.
+   (#3837, #4043 and #4586)
+ * Fix a possible freeze under heavy load (#4465)
+
+ The complete list of closed tickets can be found here:
+   http://trac.edgewall.org/query?status=closed&milestone=0.10.4
+
+Trac 0.10.3.1 (Mar 8, 2007)
+http://svn.edgewall.org/repos/trac/tags/trac-0.10.3.1
+
+ Trac 0.10.3.1 is a security fix release.
+	
+ * Always send "Content-Disposition: attachment" headers where potentially 
+   unsafe (user provided) content is available for download. This behaviour
+   can be altered using the "render_unsafe_content" option in the 
+   "attachment" and "browser" sections of trac.ini.
+ * Fixed XSS vulnerability in "download wiki page as text" in combination with 
+   Microsoft IE. Reported by Yoshinori Oota, Business Architects Inc.
+
+Trac 0.10.3 (Dec 12, 2006)
+http://svn.edgewall.org/repos/trac/tags/trac-0.10.3
+
+ Trac 0.10.3 is a bug fix release. The following list contains only a 
+ few highlights:
+
+ * Timeline fail to load with a "!NoSuchChangeset" error message (#4132).
+ * Timed out MySQL connections not handled properly (#3645).
+ * Subversion repository resync broken. (#4204).
+
+ The complete list of closed tickets can be found here:
+   http://trac.edgewall.org/query?status=closed&milestone=0.10.3
+
+Trac 0.10.3rc1 (Dec 7, 2006)
+http://svn.edgewall.org/repos/trac/tags/trac-0.10.3rc1
+
+ See 0.10.3
+
+Trac 0.10.2 (Nov 13, 2006)
+http://svn.edgewall.org/repos/trac/tags/trac-0.10.2
+
+ Trac 0.10.2 is a bug fix release. The following list contains only a 
+ few highlights:
+
+ * Fixes deadlock when using authz_file config option (#3996).
+ * Makes the CSRF code play nice with the XmlRpcPlugin (#4122).
+ * Fixes Timeline breakage after svn commit when using sqlite (#4120).
+
+ The complete list of closed tickets can be found here:
+   http://trac.edgewall.org/query?status=closed&milestone=0.10.2
+
+Trac 0.10.1 (Nov 8, 2006)
+http://svn.edgewall.org/repos/trac/tags/trac-0.10.1
+
+ Trac 0.10.1 contains a security fix and a number of bug fixes.
+ The following list contains only a few highlights:
+
+ * Fixed CSRF vulnerability (#4049), reported by Daniel Kahn Gillmor.
+ * Improved DB connection handling (#3503)
+ * Tracd no longer tries to resolve client's IP address (#3481).
+
+ The complete list of closed tickets can be found here:
+   http://trac.edgewall.org/query?status=closed&milestone=0.10.1
+
 Trac 0.10 'Zengia' (Sep 28, 2006)
 http://svn.edgewall.org/repos/trac/tags/trac-0.10
 
@@ -17,34 +89,14 @@ http://svn.edgewall.org/repos/trac/tags/trac-0.10
 Trac 0.10-rc1  (Sep 22, 2006)
 http://svn.edgewall.org/repos/trac/tags/trac-0.10rc1
 
- Trac 0.10 contains a great number of new features, improvements and
- bug fixes. The following list contains only a few highlights:
-
- * Support for spam protection.
- * Advanced diff support.
- * InterWiki and InterTrac support.
- * Improved notification system.
- * WSGI Used as web server protocol.
-
- A more complete list of new features can be found in the RELEASE file.
- The complete list of closed tickets can be found here:
-   http://trac.edgewall.org/query?status=closed&milestone=0.10
+ See 0.10
 
 Trac 0.10-beta1  (Aug 28, 2006)
 http://svn.edgewall.org/repos/trac/tags/trac-0.10b1
 
- Trac 0.10 contains a great number of new features, improvements and
- bug fixes. The following list contains only a few highlights:
+ See 0.10
 
- * Support for spam protection.
- * Advanced diff support.
- * InterWiki and InterTrac support.
- * Improved notification system.
- * WSGI Used as web server protocol.
-
- A more complete list of new features can be found in the RELEASE file.
- The complete list of closed tickets can be found here:
-   http://trac.edgewall.org/query?status=closed&milestone=0.10
+----
 
 Trac 0.9.6  (Jul 6, 2006)
 http://svn.edgewall.org/repos/trac/tags/trac-0.9.6
@@ -100,7 +152,7 @@ http://svn.edgewall.org/repos/trac/tags/trac-0.9.1
    #2318, #2329, #2366, #2369, #2373, #2383, #2416, #2457
 
 
-Trac 0.9  (Oct 31, 2005)
+Trac 0.9 'Vodun' (Oct 31, 2005)
 http://svn.edgewall.org/repos/trac/tags/trac-0.9
 
  * Support for a global trac.ini configuration file.
@@ -157,6 +209,7 @@ http://svn.edgewall.org/repos/trac/tags/trac-0.9b1
  The complete list of closed tickets can be found here:
    http://trac.edgewall.org/query?status=closed&milestone=0.9
 
+----
 
 Trac 0.8.3  (Jun 15, 2005)
 http://svn.edgewall.org/repos/trac/tags/trac-0.8.3
@@ -233,6 +286,7 @@ http://svn.edgewall.org/repos/trac/tags/trac-0.8
    #885, #888, #889, #892, #901, #903, #907, #912, 
    #916, #923, #929, #931, #932, #935
 
+----
 
 Trac 0.7.1 'Argento'  (Jun, 2004)
 http://svn.edgewall.org/repos/trac/tags/trac-0.7.1
@@ -282,8 +336,9 @@ http://svn.edgewall.org/repos/trac/tags/trac-0.7
    #371, #372, #376, #377, #378, #381, #384, #385, #386, #387, #388,
    #392, #394, #396, #397, #398, #399, #402, #403, #410
 
+----
 
-Trac 0.6.1 '245 Trioxin (April 12, 2004)
+Trac 0.6.1 '245 Trioxin' (April 12, 2004)
 http://svn.edgewall.org/repos/trac/tags/trac-0.6.1
 
  * RSS now escapes entities in summary.
@@ -317,6 +372,7 @@ http://svn.edgewall.org/repos/trac/tags/trac-0.6
    #135, #136, #138, #142, #145, #147, #151, #155, #170, #173,
    #174, #175, #177, #179
 
+----
 
 Trac 0.5.2 'Nameless' (March 2, 2004)
 http://svn.edgewall.org/repos/trac/tags/trac-0.5.2
