--- a/AUTHORS
+++ b/AUTHORS
@@ -8,5 +8,8 @@
  * Christian Boos <cboos@neuf.fr>
  * Emmanual Blot <emmanuel.blot@free.fr>
  * Alec Thomas <alec@swapoff.org>
+ * Tim Hatch <trac@timhatch.com>
+ * Eli Carter <retracile@gmail.com>
+ * Noah Kantrowitz <kantrn+trac@rpi.edu>
 
 See also THANKS for people who have contributed to the project.
