--- a/THANKS
+++ b/THANKS
@@ -12,6 +12,7 @@
  * Wesley Crucius                 wcrucius@sandc.com
  * dju'                           
  * Daragh Fitzpatrick             Daragh@i2i-Tech.com
+ * Justin Francis
  * Markus Fuchs                   
  * Eric Gillespie                 epg@netbsd.org
  * Matthew Good                   trac@matt-good.net
