--- a/THANKS
+++ b/THANKS
@@ -45,6 +45,7 @@
  * Manuzhai                       manuzhai@gmail.com
  * Armin Ronacher (mitsuhiko)     armin.ronacher@active-4.com
  * Mark Rowe                      mark.rowe@bdash.net.nz
+ * Odd Simon Simonsen             simon-code@bvnetwork.no
  * Olliver Rutherfurd             ollie
  * pkou                           pkou@ua.fm
  * Andres Salomon                 dilinger@athenacr.com
