--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
- * Jonas Borgström <jonas@edgewall.com>
+ * Jonas BorgstrÃ¶m <jonas@edgewall.com>
  * Daniel Lundin <daniel@edgewall.com>
  * Rocky Burt <rocky@carterscove.com>
  * Christopher Lenz <cmlenz@gmx.de>
