--- a/AUTHORS
+++ b/AUTHORS
@@ -11,5 +11,6 @@
  * Tim Hatch <trac@timhatch.com>
  * Eli Carter <retracile@gmail.com>
  * Noah Kantrowitz <kantrn+trac@rpi.edu>
+ * Jeroen Ruigrok van der Werven <asmodai@in-nomine.org>
 
 See also THANKS for people who have contributed to the project.
